--- a/Day 61- flask-secrets/templates/login.html
+++ b/Day 61- flask-secrets/templates/login.html
@@ -5,7 +5,7 @@
 <div class="container">
     <h1>Login</h1>
     <!-- This is where our form will go. -->
-    {{ render_form(form) }}
+   {{ render_form(form, novalidate=True) }}
 <!--    <form action="{{ url_for('login') }}" method="POST" novalidate>-->
 <!--        {{ form.csrf_token }}-->
 <!--        <p>-->
